[[release-notes-x.x.x]]
==== x.x.x - YYYY/MM/DD

[float]
===== Breaking changes

[float]
===== Features
* Cool new feature: {pull}2526[#2526]

[float]
===== Bug fixes
////

=== Unreleased

[[release-notes-1.22.0]]
==== 1.22.0 - YYYY/MM/DD

[float]
===== Features
* Deprecating `ignore_user_agents` in favour of `transaction_ignore_user_agents`, maintaining the same functionality -
{pull}1644[#1644]

[float]
===== Bug fixes

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.21.0]]
==== 1.21.0 - 2020/02/09

[float]
===== Breaking changes
* Following PR {pull}1650[#1650], there are two slight changes with the <<config-server-url>> and <<config-server-urls>>
configuration options:
    1.  So far, setting `server_urls` with an empty string would allow the agent to work normally, apart from any action
        that requires communication with the APM Server, including the attempt to fetch a central configuration.
        Starting in this agent version, setting `server_urls` to empty string doesn't have any special meaning, it is
        the default expected configuration, where `server_url` will be used instead. In order to achieve the same
        behaviour, use the new <<config-disable-send>> configuration.
    2.  Up to this version, `server_url` was used as an alias to `server_urls`, meaning that one could potentially set
        the `server_url` config with a comma-separated list of multiple APM Server addresses, and that would have been a
        valid configuration. Starting in this agent version, `server_url` is a separate configuration, and it only accepts
        Strings that represent a single valid URL. Specifically, empty strings and commas are invalid.

[float]
===== Features
* Add cloud provider metadata to reported events, see
https://github.com/elastic/apm/blob/master/specs/agents/metadata.md#cloud-provider-metadata[spec] for details.
By default, the agent will try to automatically detect the cloud provider on startup, but this can be