@@ -27,6 +27,8 @@ endif::[]
 ===== Features
 * Deprecating `ignore_user_agents` in favour of `transaction_ignore_user_agents`, maintaining the same functionality -
 {pull}1644[#1644]
+* Add a warning on startup when `-Xverify:none` or `-noverify` flags are set as this can lead to crashes that are very difficult to debug - {pull}1593[#1593]
+  In an upcoming version, the agent will not start when these flags are set, unless the system property `elastic.apm.disable_bootstrap_checks` is set to true.
 
 [float]
 ===== Bug fixes
@@ -78,7 +80,6 @@ configured through the <<config-cloud-provider, `cloud_provider`>> config option
 [float]
 ===== Features
 * Add support for RabbitMQ clients - {pull}1328[#1328]
-* Avoid starting the agent if `-Xverify:none` or `-noverify` flags are set as this can lead to crashes that are very difficult to debug - {pull}1593[#1593]
 
 [float]
 ===== Bug fixes
